# dstack-cloud

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  REUSE.toml  attestation.md  cargo-check-all.sh  cliff.toml  run-tests.sh  run.sh  rust-toolchain.toml
.agent/: GPU_TEE_DEPLOYMENT.md  WRITING_GUIDE.md
.github/workflows/: gateway-release.yml  kms-release.yml  rust-sdk-release.yml  rust.yml  sdk.yaml  spdx-check.yml  verifier-release.yml  vmm-ui.yml
basefiles/: app-compose.sh  dstack-guest-agent.service  dstack-guest-agent.socket  dstack-prepare.service  dstack-prepare.sh  dstack-socket.service  dstack-socket.socket  ephemeral-docker.sh  mount-etc-overlay.sh  tappd-socket.service  tappd-socket.socket  wg-checker.service  wg-checker.sh
basefiles/containerd.service.d/: dstack-prepare.conf
basefiles/docker.service.d/: dstack-guest-agent.conf  dstack-prepare.conf
cc-eventlog/: Cargo.toml
cc-eventlog/src/: codecs.rs  lib.rs  runtime_events.rs  tcg.rs  tdx.rs  tpm.rs
cert-client/: Cargo.toml
cert-client/src/: lib.rs
certbot/: Cargo.toml
certbot/cli/: Cargo.toml
certbot/src/: acme_client.rs  bot.rs  dns01_client.rs  lib.rs  workdir.rs
ct_monitor/: Cargo.toml
ct_monitor/src/: main.rs
docs/: RATLS_DUAL_MODE_DESIGN.md  RATLS_TESTING_STATUS.md  RATLS_VTPM_DESIGN.md  RATLS_VTPM_IMPLEMENTATION_STATUS.md  attestation-gcp.md  attestation-nitro-enclave.md  auth-simple-operations.md  confidential-ai.md  deployment.md  dstack-gateway.md  onchain-governance.md  quickstart.md  usage.md  verification.md  vmm-cli-user-guide.md
docs/security/: README.md  cvm-boundaries.md  security-best-practices.md  security-model.md
docs/security-guide/: cvm-boundaries.md
docs/tpm/: CA-TRUST-MODEL-COMPARISON.md  CERTIFICATE-PURPOSE-VALIDATION.md  CERTIFICATE_CHAIN_COMPARISON.md  COMPARISON_WITH_GO_ATTESTATION.md  CRL_ANALYSIS.md  DOC_UPDATE_2025-01-25.md  EK_CERT_KEY_USAGE.md  GCP_FIRMWARE_MRTD_REFERENCE.md  GCP_NATIVE_AK_IMPLEMENTATION.md  GCP_PCR_ANALYSIS.md  PCR_POLICY_RECOMMENDATIONS.md  PCR_RESEARCH_SUMMARY.md  QUOTE_EVENTLOG_VERIFICATION.md  README.md  ROOT_CA_CRL_FEATURE.md  ROOT_CA_CRL_VERIFICATION.md  TPM_QUOTE_QUICK_REF.txt  TPM_QUOTE_STRUCTURE.md  TPM_VS_DCAP_CERT_VERIFICATION.md  WEBPKI_EK_CERT_SOLUTION.md  WEBPKI_INTEGRATION.md  analyze_tpm_quote.sh  ca_purpose_check.sh  calculate_pcr.py  compare-ccel-tpm.sh  gcp-launch-endorsement-verification.md  gcp-vtpm-attest-minimal.sh  gcp-vtpm-attest-secure.sh  gcp_vtpm_ca_bundle.pem  intermediate_ca_full.txt  quote_eventlog_summary.txt  root_ca_full.txt  tpm_quote_trust_chain.txt  verify-gcp-launch-endorsement.py  verify_quote_eventlog.sh
dstack-attest/: Cargo.toml
dstack-attest/src/: attestation.rs  lib.rs
dstack-attest/tests/: nitro_verify.rs
dstack-attest/tests/snapshots/: nitro_verify__app_info.snap  nitro_verify__nitro_report.snap
dstack-mr/: Cargo.toml
dstack-mr/cli/: Cargo.toml
dstack-mr/src/: acpi.rs  kernel.rs  lib.rs  machine.rs  num.rs  tdvf.rs  util.rs
dstack-mr/tests/: tdvf_parse.rs
dstack-types/: Cargo.toml
dstack-types/src/: lib.rs  mr_config.rs  shared_filenames.rs  version.rs
dstack-util/: Cargo.toml
dstack-util/src/: crypto.rs  docker_compose.rs  host_api.rs  main.rs  parse_env_file.rs  system_setup.rs  tpm.rs  utils.rs
dstack-util/tests/: test_remove_orphans.sh
gateway/: Cargo.toml  gateway.toml
gateway/dstack-app/: deploy-to-vmm.sh  docker-compose.yaml
gateway/rpc/: Cargo.toml  build.rs
gateway/src/: admin_service.rs  config.rs  main.rs  main_service.rs  models.rs  proxy.rs  web_routes.rs
gateway/templates/: dashboard.html  rproxy.yaml
guest-agent/: Cargo.toml  dstack.toml
guest-agent/rpc/: Cargo.toml
guest-agent/src/: config.rs  guest_api_service.rs  http_routes.rs  main.rs  models.rs  rpc_service.rs  socket_activation.rs
guest-agent/templates/: dashboard.html
guest-api/: Cargo.toml  build.rs
guest-api/proto/: guest_api.proto
guest-api/src/: client.rs
host-api/: Cargo.toml
host-api/proto/: host_api.proto
host-api/src/: client.rs  lib.rs
http-client/: Cargo.toml
http-client/src/: hyper_vsock.rs  lib.rs  prpc.rs
iohash/: Cargo.toml
iohash/src/: main.rs
key-provider-build/: Dockerfile.aesmd  Dockerfile.key-provider  docker-compose.yaml  entrypoint-aesmd.sh  entrypoint-key-provider.sh  run.sh  sgx_default_qcnl.conf
key-provider-client/: Cargo.toml
key-provider-client/src/: host.rs  lib.rs
kms/: Cargo.toml  README.md  kms.toml
kms/auth-eth/: hardhat.config.ts  jest.config.js  jest.integration.config.js  package-lock.json  run-tests.sh
kms/auth-eth-bun/: index.test.ts  index.ts  package.json
kms/auth-mock/: index.ts  (+3 more)
load_config/: Cargo.toml
lspci/: Cargo.toml
mod-tdx-guest/: mod.c
no_std_check/: Cargo.toml
nsm-attest/: Cargo.toml
nsm-attest/src/: lib.rs  types.rs
nsm-attest/tests/: attestation_test.rs
nsm-qvl/: Cargo.toml
nsm-qvl/src/: collateral.rs  lib.rs  verify.rs
nsm-qvl/tests/: verify_test.rs
ra-rpc/: Cargo.toml
ra-tls/: Cargo.toml
rocket-vsock-listener/: Cargo.toml
scripts/: add-spdx-attribution.py  config-fw.sh
sdk/: README.md  run-tests.sh
serde-duration/: Cargo.toml
size-parser/: Cargo.toml
sodiumbox/: Cargo.toml
supervisor/: Cargo.toml  supervisor.toml
tdx-attest/: Cargo.toml
tdx-attest/examples/: test_tdx.rs
tdx-attest/src/: dummy.rs  lib.rs  linux.rs
tdx-attest/src/linux/: configfs.rs
test-scripts/: get-app-key.sh  inspect-cert.sh
tpm/: Cargo.toml
tpm-attest/: Cargo.toml
tpm-attest/src/: esapi.rs  esapi_impl.rs  gcp_ak.rs  lib.rs
tpm-qvl/: Cargo.toml
tpm-qvl/src/: collateral.rs  lib.rs  verify.rs
tpm-types/: Cargo.toml
tpm-types/src/: lib.rs
tpm/src/: esapi_impl.rs  gcp_ak.rs  lib.rs  verify.rs
tpm2/: Cargo.toml
tpm2/src/: commands.rs  constants.rs  device.rs  lib.rs  marshal.rs  session.rs  types.rs
verifier/: Cargo.toml  README.md  dstack-verifier.toml  test.sh
verifier/builder/: Dockerfile  build-image.sh
verifier/builder/shared/: pin-packages.sh
verifier/src/: lib.rs  main.rs  types.rs  verification.rs
vmm/: Cargo.toml  venv.sh  vmm.toml
(+157 files in other folders)
