# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "nsm-attest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "AWS Nitro Enclave NSM attestation library"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
aws-nitro-enclaves-nsm-api = "0.4"
ciborium.workspace = true

[dev-dependencies]
hex.workspace = true
