# SPDX-FileCopyrightText: © 2024-2025 Phala Network <dstack@phala.network>
# SPDX-FileCopyrightText: © 2025 Daniel Sharifi <daniel.sharifi@nearone.org>
#
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "tdx-attest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
scale.workspace = true
serde.workspace = true
serde-human-bytes.workspace = true
cc-eventlog.workspace = true
thiserror.workspace = true
fs-err.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
sha2.workspace = true

# Linux x86_64 - pure Rust implementation using libc for syscalls
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
libc.workspace = true
vsock = "0.5"

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true
dcap-qvl.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
