# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-tpm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hex = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
serde-human-bytes.workspace = true
serde_json = { workspace = true, features = ["std"] }
sha2.workspace = true
tempfile.workspace = true
tracing.workspace = true
fs-err.workspace = true

# Cryptographic verification
rsa = "0.9"
x509-parser = "0.16"
der-parser = "9.0"
nom = "7.1"
base64 = "0.22"
