# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-tpm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hex = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
serde-human-bytes.workspace = true
serde_json = { workspace = true, features = ["std"] }
sha2 = { workspace = true, features = ["oid"] }
tempfile.workspace = true
tracing.workspace = true
fs-err.workspace = true

# Cryptographic verification
rsa = "0.9"
x509-parser = "0.16"
nom = "7.1"
base64 = "0.22"

# TPM 2.0 TSS ESAPI for low-level TPM operations
tss-esapi = "7.5"

# Certificate chain verification
rustls-webpki = { version = "0.103.8", features = ["alloc", "ring"] }
rustls-pki-types = "1.13.1"
dcap-qvl-webpki = { version = "0.103", features = ["alloc", "ring"] }
pem = "3.0"
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "blocking",
], optional = true }


[features]
default = ["crl-download"]
crl-download = ["reqwest"]
