# SPDX-FileCopyrightText: © 2024-2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-verifier"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "dstack_verifier"
path = "src/lib.rs"

[[bin]]
name = "dstack-verifier"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
figment = { workspace = true, optional = true }
fs-err.workspace = true
hex.workspace = true
rocket = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
reqwest.workspace = true
tempfile.workspace = true

# Internal dependencies
ra-tls.workspace = true
dstack-types.workspace = true
dstack-mr.workspace = true

# Crypto/verification dependencies
dcap-qvl.workspace = true
cc-eventlog.workspace = true
sha2.workspace = true
tpm-qvl.workspace = true
tpm-types.workspace = true
nsm-attest.workspace = true
ez-hash.workspace = true
serde-human-bytes.workspace = true
hex-literal.workspace = true

[features]
default = ["binary"]
binary = ["dep:clap", "dep:figment", "dep:rocket", "dep:tracing-subscriber"]
